CV2/styles/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  border: none;
  outline: none;
  scroll-behavior: none;
  outline: none;
  font-family: "Poppins", sans-serif;
}
:root {
  --bg-color: #080808;
  --second-bg-color: #1b0000;
  --text-color: white;
  --main-color: #f6060b;
}
html {
  font-size: 60%;
  overflow-x: hidden;
}
body {
  background: var(--bg-color);
  color: var(--text-color);
}
.header {
  position: fixed;
  top: 0%;
  left: 0%;
  padding: 4rem 12% 4rem;
  background: rgba(0, 0, 0, 0.3);
  backdrop-filter: blur(10px);
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 100;
  width: 100%;
}
.logo {
  font-size: 3rem;
  color: var(--text-color);
  font-weight: 800;
  cursor: pointer;
  transition: 0.3s ease;
}
.logo:hover {
  transform: scale(1.1);
}
.logo span {
  text-shadow: 0 0 25px var(--main-color);
}
.navbar a {
  font-size: 1.8rem;
  color: var(--text-color);
  margin-left: 4rem;
  font-weight: 500;
  transition: 0.3s ease;
  border-bottom: 3px solid transparent;
}
.navbar a:hover,
.navbar a:active {
  color: var(--main-color);
  border-bottom: 3px solid var(--main-color);
}
#menu-icon {
  font-size: 3.6rem;
  color: var(--main-color);
  display: none;
}
section {
  min-height: 100 vh;
  padding: 10 rem 12% 10rem;
}
.home {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15rem;
}
.home-content {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  text-align: right;
  justify-content: center;
}
span {
  color: var(--main-color);
}
.logo span {
  color: var(--main-color);
}
.home-content h3 {
  margin-bottom: 2rem;
  margin-top: 1rem;
  font-size: 3.5rem;
}
/* PROBLEM HERE, H1 IS STUCK IN NAVBAR, GOING TO MOVE ON, WASTED TOO MUCH TIME, FIX LATER 10:00 , MARGIN, BORDER AND GAP NOT WORKING, 
Just duplicated it, works but not what I want, could just put a blank div or h1 there to placeholde/push down, looks fine for now with the blur */
.home-content h1 {
  font-size: 7rem;
  font-weight: 700;
  margin: 1.5rem;
  line-height: 1;
}
.home-img img {
  position: relative;
  width: 32vw;
  border-radius: 50%;
  box-shadow: 0 0 25px var(--main-color);
}
.home-img img:hover {
  box-shadow: 0 0 25px var(--main-color), 0 0 50px var(--main-color),
    0 0 100px var(--main-color);
}

